Added basic templating

--- a/views/front-page.html
+++ b/views/front-page.html
@@ -1,1 +1,11 @@
-<h1>FRONT page</h1>
+<!doctype html>
+<html>
+  <body>
+    <h1>RealEarly.me</h1>
+    <form action="/">
+      <label for="username">Twitter username</label>
+      <input id="username" name="username" type="text"></input>
+      <button type="submit">Submit</submit>
+    </form>
+  </body>
+  </html>
