--- a/views/unknown-page.html
+++ b/views/unknown-page.html
@@ -1,1 +1,7 @@
-<h1>UNKNOWN page</h1>
+<h1>UNKNOWN username <em><!--% username %--></em></h1>
+
+<ul>
+  <li>Foo: <!--% foo %--></li>
+  <li>Bar: <!--% bar %--></li>
+  <li>Baz: <!--% baz %--></li>
+</ul>
