--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,37 +1,37 @@
 @font-face {
-	font-family: miso;
-	src: url("../fonts/miso.otf") format("opentype");
+    font-family: miso;
+    src: url("../fonts/miso.otf") format("opentype");
 }
 
 html {
-	background: url(../img/graph3.png) no-repeat;
-	font-family: Helvetica, Arial, sans-serif;
-	font-size: 20px;
-	height: 100%;
+    background: url(../img/graph3.png) no-repeat;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 20px;
+    height: 100%;
 }
 
 body {
-	color: #555555;
-	text-align: center;
-	padding: 0;
-	margin: 0;
+    color: #555555;
+    text-align: center;
+    padding: 0;
+    margin: 0;
 }
 
-div#content {
-	padding-top: 200px;
-	position: relative;
-	text-align: left;
-	height: 960px;
-	width: 720px;
-	margin: 0 auto;
-	clear: left;
+#content {
+    padding-top: 200px;
+    position: relative;
+    text-align: left;
+    height: 960px;
+    width: 720px;
+    margin: 0 auto;
+    clear: left;
 }
 
-div#logo {
-	background: url(../img/logo.png) no-repeat;
-	text-indent: -9999px;
-	width: 235px; height: 42px;
-	margin: 10px 0 0 10px;
+#logo {
+    background: url(../img/logo.png) no-repeat;
+    text-indent: -9999px;
+    width: 235px; height: 42px;
+    margin: 10px 0 0 10px;
 }
 
 a:link {color: #555555;}
@@ -40,49 +40,49 @@ a:hover {color: #c32427; text-decoration: none;}
 
 
 #twitter {
-	margin-left: 40px; 
-	background: url(../img/seanmeverett128.jpg) top left no-repeat;
-	width: 128px; height: 128px;
+    margin-left: 40px;
+    /*background: url(../img/seanmeverett128.jpg) top left no-repeat;*/
+    width: 128px; height: 128px;
 }
 .bubbleInfo {
-	width: 128px;
-	height: 128px;
-	position: relative;
-	float:left;
+    width: 128px;
+    height: 128px;
+    position: relative;
+    float:left;
 }
 .trigger {
-	position: absolute;
-	font-size: 18px;
-	color:#555555;
+    position: absolute;
+    font-size: 18px;
+    color:#555555;
 }
 .popup {
-	margin-left: 68px;
-	width: 250px;
-	height: 110px;
-	background: url(../img/tooltipsmall.png) top left no-repeat;
-	text-align: center;
-	position: absolute;
-	display: none;
+    margin-left: 68px;
+    width: 250px;
+    height: 110px;
+    background: url(../img/tooltipsmall.png) top left no-repeat;
+    text-align: center;
+    position: absolute;
+    display: none;
 }
 
 .popup p {
-	clear:both;
-	font-size: 16px;
-	padding: 4px;
-	margin: 0;
+    clear:both;
+    font-size: 16px;
+    padding: 4px;
+    margin: 0;
 }
 .popup a {
-	color:#555555;
+    color:#555555;
 }
 .popup a:hover {
-	color: #c32427;
-	text-decoration:none;
+    color: #c32427;
+    text-decoration:none;
 }
 
 #footer {
-	text-align: center;
-	color: #555555;
-	font-family: Helvetica, Arial, sans-serif;
-	font-size: 10px;
-	padding-left: 40px;
+    text-align: center;
+    color: #555555;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 10px;
+    padding-left: 40px;
 }
