--- a/views/index.html
+++ b/views/index.html
@@ -1,45 +1,44 @@
 <!DOCTYPE html>
-
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>Real Early</title>
-	<meta name="description" content="Find out if you're an early adopter on social networks like twitter with Real Early. Just enter your twitter handle (@RealEarlyApp) and make unicorns cry.">
-	
-	<!-- Favicon -->
-	<link rel="shortcut icon" href="img/favicon.png">
+  <head>
+    <meta charset="utf-8">
+    <title>Real Early</title>
+    <meta name="description" content="Find out if you're an early adopter on social networks like twitter with Real Early. Just enter your twitter handle (@RealEarlyApp) and make unicorns cry.">
+    
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="img/favicon.png">
 
-	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/style.css" media="all">
-	
-	<!-- Scripts -->
-	<script type="text/javascript" src="js/jquery-1.3.2.min.js" ></script>
-	<script src="js/popup.js" type="text/javascript"></script>
-
-</script>
-</head>
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="css/style.css" media="all">
+    
+  </head>
 <body>
 
-<div id="logo"></div>
+  <div id="logo"></div>
+  <form>
+    <input name="screen_name" placeholder="Enter your Twitter screen name"
+    value="<!--%screen_name%-->"/>
 
-<div id="distance"></div>
-<div id="content">
+  <div id="distance"></div>
+  <div id="content">
 
- <div class="bubbleInfo">
-   <div>
-     <h3 class="trigger"><div id="twitter"></div></h3>
-   </div>
-   <div class="popup">
-     <br><p>Twitter:  <a href="http://twitter.com/<!--%user_name%-->"><!--%user_name%--></a></p>
-     <p>User#:  <!--%user_id%--></p>
-   </div>
- </div>
-   
-  
-<div id="footer">
-	Follow <a href="http://twitter.com/realearlyapp">@RealEarlyApp</a> on Twitter
-</div>
-  
-
+    <div class="bubbleInfo">
+      <div>
+        <h3 class="trigger"><div id="twitter" style="background: url(<!--%profile_image_url%-->) top left no-repeat"></div></h3>
+      </div>
+      <div class="popup">
+        <br><p>Twitter:  <a href="http://twitter.com/<!--%screen_name%-->"><!--%screen_name%--></a></p>
+        <p>User#:  <!--%user_id%--></p>
+      </div>
+    </div>
+    
+    
+    <div id="footer">
+      Follow <a href="http://twitter.com/realearlyapp">@RealEarlyApp</a> on Twitter
+    </div>
+    
+    <!-- Scripts -->
+    <script type="text/javascript" src="js/jquery-1.3.2.min.js" ></script>
+    <script src="js/popup.js" type="text/javascript"></script>
 </body>
 </html>
