--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,26 +4,24 @@
 }
 
 html {
-    background: url(../img/graph3.png) no-repeat;
     font-family: Helvetica, Arial, sans-serif;
     font-size: 20px;
-    height: 100%;
 }
 
 body {
     color: #555555;
-    text-align: center;
     padding: 0;
     margin: 0;
 }
 
 #content {
+    background: url(../img/graph3.png) no-repeat;
     padding-top: 200px;
     position: relative;
     text-align: left;
-    height: 960px;
-    width: 720px;
-    margin: 0 auto;
+    width: 960px;
+    height: 720px;
+    margin: 0;
     clear: left;
 }
 
@@ -40,49 +38,80 @@ a:hover {color: #c32427; text-decoration: none;}
 
 
 #twitter {
-    margin-left: 40px;
-    /*background: url(../img/seanmeverett128.jpg) top left no-repeat;*/
-    width: 128px; height: 128px;
+    width: 128px; 
+    height: 128px;
 }
 .bubbleInfo {
     width: 128px;
     height: 128px;
-    position: relative;
-    float:left;
+    /*position: relative;
+    float:left;*/
+    position: absolute;
+    top: 400px;
 }
 .trigger {
     position: absolute;
     font-size: 18px;
     color:#555555;
 }
-.popup {
-    margin-left: 68px;
-    width: 250px;
-    height: 110px;
-    background: url(../img/tooltipsmall.png) top left no-repeat;
+.flag {
+    padding: 1em;
     text-align: center;
     position: absolute;
-    display: none;
+    top: 258px;
+    border: 2px solid #ccc;
+    border-radius: 0 4px 4px 0;
+    background-color: white;
+    background-image: ../img/flag.png
 }
 
-.popup p {
+.flag p {
+    text-align: left;
     clear:both;
     font-size: 16px;
     padding: 4px;
-    margin: 0;
+    margin: 0 0 0 61px
 }
-.popup a {
+.flag a {
     color:#555555;
 }
-.popup a:hover {
+.flag a:hover {
     color: #c32427;
     text-decoration:none;
 }
 
 #footer {
+    display: none;
     text-align: center;
     color: #555555;
     font-family: Helvetica, Arial, sans-serif;
     font-size: 10px;
     padding-left: 40px;
+}
+
+[name="screen_name"]{
+    border-radius: 5px;
+    position: absolute;
+    top: 12px;
+    left: 258px;
+    height: 32px;
+    width: 200px;
+}
+
+button[type="submit"]{
+    position: absolute;
+    top: 10px;
+    left: 475px;
+    border: 1px solid transparent;
+    padding: 1em;
+    border-radius: 4px;
+    font-weight: bold;
+}
+
+#distance {
+    background: #CCC;
+    height: 400px;
+    width: 2px;
+    position: absolute;
+    top: 259px;
 }
