--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 #content {
-    background: url(../img/graph3.png) no-repeat;
+    background: url(../img/graphsmall.png) no-repeat;
     padding-top: 200px;
     position: relative;
     text-align: left;
@@ -29,7 +29,7 @@ body {
     background: url(../img/logo.png) no-repeat;
     text-indent: -9999px;
     width: 235px; height: 42px;
-    margin: 10px 0 0 10px;
+    margin: 20px 0 0 10px;
 }
 
 a:link {color: #555555;}
@@ -58,7 +58,7 @@ a:hover {color: #c32427; text-decoration: none;}
     padding: 1em;
     text-align: center;
     position: absolute;
-    top: 258px;
+    top: 239px;
     border: 2px solid #ccc;
     border-radius: 0 4px 4px 0;
     background-color: white;
@@ -92,7 +92,7 @@ a:hover {color: #c32427; text-decoration: none;}
 [name="screen_name"]{
     border-radius: 5px;
     position: absolute;
-    top: 12px;
+    top: 17px;
     left: 258px;
     height: 32px;
     width: 200px;
@@ -102,16 +102,20 @@ button[type="submit"]{
     position: absolute;
     top: 10px;
     left: 475px;
-    border: 1px solid transparent;
     padding: 1em;
+    border: 1px solid transparent;
     border-radius: 4px;
     font-weight: bold;
+    width: 262px;
+    height: 54px;
+    text-indent: -9999px;
+    background: url(../img/button.png) top left no-repeat;
 }
 
 #distance {
     background: #CCC;
-    height: 400px;
+    height: 300px;
     width: 2px;
     position: absolute;
-    top: 259px;
+    top: 239px;
 }
