--- a/views/index.html
+++ b/views/index.html
@@ -27,8 +27,8 @@
       <p><span style="font-weight: bold; color: #F00">Score: <!--%score%--></span></p>
       <p>Twitter:  <a href="http://twitter.com/<!--%screen_name%-->"><!--%screen_name%--></a></p>
       <p>User#:  <!--%user_id%--></p>
-      <p><a href="http://twitter.com/home?status=I'm%20an%20early%20adopter%20according%20to%40RealEarlyApp,%20check%20it%20out%20http%3A%2F%2Frealearly.me">Share
-      on Twitter</a></p>
+      <p><a href="http://twitter.com/home?status=I'm%20an%20early%20adopter%20according%20to%40RealEarlyApp,%20check%20it%20out%20http%3A%2F%2Frealearly.me"
+            >Share on Twitter</a></p>
     </div>
     <div id="distance" style="left:<!--%flag_position%-->px">&nbsp;</div>
     <div id="footer">
